--- a/style.css
+++ b/style.css
@@ -5,9 +5,10 @@ padding:0px;
 background-color:#8A9BC4;
 display:block;
 clear:both;
-overflow:visible;
+overflow:hidden;
 width:100%;
-height:50px;
+height:100%;
+border:1px solid #8A9BC4;
 }
 #nav li {
 float:left;
@@ -21,6 +22,7 @@ font-family:Trebuchet MS, sans-serif;
 color:white;
 text-decoration:none;
 border-bottom:0px;
+margin:0px;padding:0px;
 font-size:20px;
 padding-top:13px;
 padding-bottom:13px;
